--- a/.github/workflows/vue_deploy.yml
+++ b/.github/workflows/vue_deploy.yml
@@ -31,6 +31,6 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: "-rltgoDzvO --delete"
           SOURCE: "dist/"
-          REMOTE_HOST: "http://ec2-18-118-157-61.us-east-2.compute.amazonaws.com/"
+          REMOTE_HOST: "ec2-18-118-157-61.us-east-2.compute.amazonaws.com"
           REMOTE_USER: ubuntu
           TARGET: "/var/www/html/travel-frontend"
