--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.28.0",
     "eslint-plugin-vue": "^9.7.0",
+    "formdata-node": "^5.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
