--- a/.github/workflows/vue_deploy.yml
+++ b/.github/workflows/vue_deploy.yml
@@ -31,6 +31,6 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: "-rltgoDzvO --delete"
           SOURCE: "dist/"
-          REMOTE_HOST: "ec2-18-188-0-226.us-east-2.compute.amazonaws.com"
-          REMOTE_USER: ubuntu
+          REMOTE_HOST: "ec2-3-135-251-189.us-east-2.compute.amazonaws.com"
+          REMOTE_USER: "ubuntu"
           TARGET: "/var/www/html/travel-frontend"
