--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "cross-env vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@mdi/font": "^7.0.96",
     "axios": "^1.1.3",
     "cross-env": "^7.0.3",
