--- a/.github/workflows/vue_deploy.yml
+++ b/.github/workflows/vue_deploy.yml
@@ -33,4 +33,4 @@ jobs:
           SOURCE: "dist/"
           REMOTE_HOST: "ec2-3-135-251-189.us-east-2.compute.amazonaws.com"
           REMOTE_USER: "ubuntu"
-          TARGET: "/var/www/html/travel-frontend"
+          TARGET: "/var/www/html"
